tests/assembler/fail/relative_too_far.tal
|0100
@test
&target
    #12
$90
    ,&target JMP
